# shazam-cli

./: .gitignore  AGENT_ARCHITECTURE.md  README.md  build.sh  install.sh  mix.exs  shazam.example.yaml
.github/workflows/: release.yml
config/: config.exs
lib/: shazam.ex
lib/mix/tasks/: shazam.agent.add.ex  shazam.apply.ex  shazam.dashboard.ex  shazam.init.ex  shazam.logs.ex  shazam.org.ex  shazam.start.ex  shazam.status.ex  shazam.stop.ex  shazam.task.ex
lib/shazam/: agent_inbox.ex  agent_presets.ex  agent_worker.ex  application.ex  cli.ex  company.ex  file_logger.ex  hierarchy.ex  memory_bank.ex  metrics.ex  module_manager.ex  orchestrator.ex  ralph_loop.ex  repo.ex  retry_policy.ex  session_pool.ex  skill_memory.ex  store.ex  subtask_parser.ex  task_board.ex  task_executor.ex  task_scheduler.ex  task_templates.ex
lib/shazam/api/: event_bus.ex  helpers.ex  router.ex  websocket.ex
lib/shazam/api/routes/: company_routes.ex  misc_routes.ex  ralph_routes.ex  skill_routes.ex  task_routes.ex  (+1 more)
lib/shazam/cli/: formatter.ex  helpers.ex  http_client.ex  repl.ex  shared.ex  tui_port.ex  yaml_parser.ex
lib/shazam/task_executor/: prompt_builder.ex
shazam-tui/: Cargo.toml
shazam-tui/src/: main.rs  protocol.rs  state.rs  ui.rs
test/: hierarchy_test.exs  shazam_test.exs  task_board_test.exs  test_helper.exs
test/shazam/: agent_inbox_test.exs  agent_presets_test.exs  file_logger_test.exs  hierarchy_test.exs  memory_bank_test.exs  metrics_test.exs  store_test.exs  task_board_test.exs  task_scheduler_test.exs  yaml_parser_test.exs
test/support/: factory.ex
(+13 files in other folders)
